# verbal-synth

./: .gitignore  A6.md  CLAUDE.md  CMakeLists.txt  DATASET_PLAN.md  DATASET_v5_PLAN.md  ML_IMPLEMENTATION.md  PIVOT_RETRIEVAL.md  PROJECT.md  README.md  RESEARCH_BRIEF.md  notes.md
Source/: AdsrDisplay.h  AdsrEnvelope.cpp  AdsrEnvelope.h  ChorusEffect.cpp  ChorusEffect.h  DelayEffect.cpp  DelayEffect.h  DriveProcessor.h  FilterVisualizer.h  LfoGenerator.cpp  LfoGenerator.h  Main.cpp  MainComponent.cpp  MainComponent.h  NoiseGenerator.h  Oscillator.cpp  Oscillator.h  PatchPanel.cpp  PatchPanel.h  PhaserEffect.cpp  PhaserEffect.h  PresetManager.h  ReverbEffect.cpp  ReverbEffect.h  SynthEngine.cpp  SynthEngine.h  SynthFilter.cpp  SynthFilter.h  SynthParameters.h  SynthUtils.h  SynthVoice.cpp  SynthVoice.h  UIColors.h  VerbalLookAndFeel.h  WaveDisplay.h  WavetableBank.h  WavetableOscillator.h
ml/: requirements.txt
ml/config/: archetypes.json  param_reference.json  sound_taxonomy.json  system_prompt.md  system_prompt_descriptions.md  system_prompt_reference.md  wavetable_doc.json
ml/data/: dataset.jsonl  patches_raw.json  patches_raw_validated.json
ml/eval/: build_golden_retrieval.py  golden_prompts.json  golden_retrieval.json
ml/models/: meta.json
ml/scripts/: attr_decode.py  audit_coverage.py  audit_role_bases.py  build_dataset.py  build_library.py  clf.py  eval_anchors.py  eval_golden.py  eval_listen.py  eval_modifiers.py  eval_retrieval.py  gen_library.py  (+29 more)
thesis/: CONTEXT.md  DIAGRAMS.md  L1_structure.md  L2_outline.md  L3_detailed.md  OUTLINE.md  sources.md
(+28 files in other folders)
